# rescript-aeson-spec

./: .gitignore  Changelog.md  LICENSE  README.md  bsconfig.json  package.json  rescript.json  test.sh
__tests__/: Aeson_spec_test.ml  Aeson_spec_test.res  person.json  sample.json
__tests__/golden/: Person.json
__tests__/golden/Broken/: Broken.json
__tests__/golden/Company/: Company.json
__tests__/golden/Shape/: Rectangle.json  Square.json  Triangle.json
lib/js/__tests__/: Aeson_spec_test.js
lib/js/src/: Aeson2.js  AesonSpec.js  AesonSpec_Jest.js  Aeson_spec.js
server/: server.cabal  stack.yaml
server/app/: Main.hs
server/tt/: #Person.json#  .#Person.json  Person.json
src/: Aeson2.mli  AesonSpec.ml  AesonSpec.mli  AesonSpec.res  AesonSpec.resi  AesonSpec_Jest.mli  AesonSpec_Jest.res  AesonSpec_Jest.resi  Aeson_spec.ml  Aeson_spec.mli  InternalJest.mli
