name:                server
version:             0.1.0.0
homepage:            https://github.com/plow-technologies/bs-aeson-spec#readme
license:             BSD3
license-file:        LICENSE
author:              James M.C. Haver II
maintainer:          mchaver@gmail.com
copyright:           BSD3
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable server
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aeson
                     , bytestring
                     , directory
                     , hspec-golden-aeson == 0.4.0.0
                     , quickcheck-arbitrary-adt
                     , QuickCheck
                     , servant
                     , servant-server
                     , wai
                     , warp
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/plow-technologies/bs-aeson-spec
